2009-03-13  Peter Kasting  <pkasting@google.com>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=24467
        Make Skia drawRect() and stroke behavior match CG.

        This makes drawRect() ignore the stroke width (like CG does), and
        adds a warning comment about that to the appropriate header.

        It also eliminates some hacky code in Skia's stroke preparation,
        which tried to adjust odd-width strokes to fall on pixel boundaries.
        Not only did this not match CG, it wouldn't necessarily work right,
        because there could be other transforms (e.g. full-page zoom) that
        would affect the stroke before it reached the device pixel level.

        * platform/graphics/GraphicsContext.h:
        * platform/graphics/skia/GraphicsContextSkia.cpp:
        (WebCore::GraphicsContext::drawRect):
        (WebCore::GraphicsContext::fillRect):
        * platform/graphics/skia/PlatformContextSkia.cpp:
        (PlatformContextSkia::drawRect):
        (PlatformContextSkia::setupPaintForStroking):



Canonical link: https://commits.webkit.org/33742@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41683 268f45cc-cd09-0410-ab3c-d52691b4dbfc